rabbit/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app:  rabbitmq # has to match .spec.template.metadata.labels
  serviceName: "not-applicable"
  replicas: 1 # by default is 1
  template:
    metadata:
      labels:
        app: rabbitmq # has to match .spec.selector.matchLabels
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
          - name : http
            containerPort: 15672
            protocol: TCP 

          - name : amqp 
            containerPort: 5672
            protocol: TCP 
        #envFrom:
        #  - configMapRef:
        #      name: rabbitmq-config
        #  - secretRef:
        #      name: rabbitmq-secret

        volumeMounts:
        - name: rabbitmq-volume
          mountPath: "/var/lib/rabbitmq"

      volumes: 
        - name: rabbitmq-volume
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
