rabbit/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: rabbit-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/prox-read-timeout: "600"
    nginx.ingress.kubernetes.io/prox-send-timeout:  "600"

spec:

  #ingressClassName: nginx-example

  rules:
    - host : "rabbitmq-manager.com"
      http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
